--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,9 +1,10 @@
-<button type="button" class="btn btn-primary btn-md " data-toggle="modal" data-target="#modelId">
+<!--Button Trigger Modal-->
+<!-- <button type="button" class="btn btn-primary btn-md " data-toggle="modal" data-target="#modelId">
     Add Quote
-  </button>
+  </button> -->
   
   <!-- Modal -->
-  <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+  <!-- <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
               <div class="modal-header">
@@ -11,7 +12,7 @@
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                       </button>
-              </div>
+              </div> -->
               <form (ngSubmit)="onSubmit(form)" #form="ngForm">
   
                   <div class="modal-body">
@@ -51,6 +52,6 @@
                     <button type="submit" class="btn btn-success rounded-pill">ADD</button>
                 </div>
             </form>
-        </div>
+        <!-- </div>
     </div>
-</div>
+</div> -->
