--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -5,7 +5,7 @@
     <hr>
     <p><small class="text-muted"> Author </small> {{quote.author}}</p>
     <p><small class="text-muted">Uploaded by </small> {{quote.userName}}</p>
-    <p><small class="text-muted">Posted </small> {{quote.datePosted|datePassed}} days ago</p>
+    <p><small class="text-muted">Posted </small> {{quote.datePosted|date}} </p>
     <p> <span class="green">{{quote.upvote}} Upvotes   </span>  <br>   <span class="red">{{quote.downvote}} Downvotes</span></p>
     <hr>
 
