added style in the file

--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -9,7 +9,7 @@
 }
 
 .card{
-    background-color: #1f3669;
+    background-color: #14213d;
     color: black;
     border:1px  #fca311;
     border-style: groove;
