added changes in the file

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -9,7 +9,7 @@
     </nav>
     <div class="quotes">
         <div class="container">
-            <h4 class="text-center">Natasha's Inspiration</h4>
+            <h4 class="text-center">NATASHA'S INSPIRATIONS</h4>
 
             <div class="card-columns">
                 <div class="card" *ngFor="let quote of quotes;let i=index">
