--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 <div class="maincontent">
     <nav class="nav justify-content-center navbar-fixed-bottom navbar-dark bg-dark">
 
@@ -7,7 +9,6 @@
         </div>    
       
     </nav>
-    <div class="quotes">
         <div class="container">
             <h4 class="text-center">NATASHA'S INSPIRATIONS</h4>
 
@@ -35,4 +36,4 @@
 
         </div>
     </div>
-</div>
+
