added style in the file

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -13,7 +13,7 @@
                           <span aria-hidden="true">&times;</span>
                       </button>
               </div> -->
-              <h3 style="color: white;">Add Quote</h3>
+              <h3 style="color: white;">ADD QUOTE</h3>
               <form (ngSubmit)="onSubmit(form)" #form="ngForm">
   
                   <div class="modal-body">
