--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -10,7 +10,7 @@
       
     </nav>
         <div class="container">
-            <h4 class="text-center">NATASHA'S INSPIRATIONS</h4>
+            <h4 class="text-center" style="color: white;">NATASHA'S INSPIRATIONS</h4>
 
             <div class="card-columns">
                 <div class="card" *ngFor="let quote of quotes;let i=index">
